syntax = "proto3";
package microtick.v1beta1.msg;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/microtick/mtzone/x/microtick/msg";

message TxUpdateQuote {
  
  uint32 id = 1 [
    (gogoproto.jsontag) = "id"
  ];
  
  bytes requester = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.jsontag) = "requester"
  ];
  
  string new_spot = 3 [
    (gogoproto.jsontag) = "new_spot"
  ];
  
  string new_ask = 4 [
    (gogoproto.jsontag) = "new_ask"
  ];
  
  string new_bid = 5 [
    (gogoproto.jsontag) = "new_bid"
  ];
  
}

message UpdateQuoteData {
  
  int64 time = 1 [
    (gogoproto.jsontag) = "time"
  ];
  
  string market = 2 [
    (gogoproto.jsontag) = "market"
  ];
  
  string duration = 3 [
    (gogoproto.jsontag) = "duration"
  ];
  
  cosmos.base.v1beta1.DecCoin consensus = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "consensus"
  ];
  
  cosmos.base.v1beta1.DecCoin commission = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "commission"
  ];
  
  cosmos.base.v1beta1.Coin reward = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "reward"
  ];
  
  string adjustment = 7 [
    (gogoproto.jsontag) = "adjustment"
  ];
  
}
